Mark record classfiles as preview minor if they use strict